# container-runtime

./: .env  .env.sample  .gitignore  Cargo.toml  Makefile  README.md  build.rs  install_debian.sh  log4rs.yaml  log4rs.yml  odd.sh
.cargo/: config.toml
examples/bash_scripts/: Dockerfile  even.sh  odd.sh
examples/nginx/: Dockerfile
examples/nodejs/: Dockerfile
examples/nodejs/nodejs-server/: index.js  package-lock.json  package.json
install_scripts/: build.sh  container-runtime.service  install.sh  install_arch.sh  install_debian.sh
src/: Dockerfile  client.rs  common.rs  container.rs  daemon.rs  image.rs  lib.rs  main.rs  rootfs.rs  unshare.rs
src/client/: cli.rs
src/common/: client_request.rs  commands.rs  feedback_commands.rs  filesystem.rs  image.rs  logs.rs  process.rs  runtime_commands.rs  socket.rs  sockets.rs  strace.rs  thread_pool.rs  unix_socket.rs
src/common/commands/: feedback_commands.rs  runtime_commands.rs
src/common/sockets/: container_commands_socket.rs  feedback_commands_socket.rs  generic_sockets_with_parsers.rs  sockets_with_parsers.rs  unix_socket.rs
src/common/sockets/raw_sockets/: unix_socket.rs
src/common/sockets/sockets_with_parsers/: container_commands_socket.rs  feedback_commands_socket.rs
src/daemon/: container.rs  image.rs
