[package]
name = "container-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23"
libc = "0.2.153"
clap = {version = "4.5.0", features=["derive"]}
dotenv = "0.15.0"
serde = {version = "1.0.196", features=["derive"]}
serde_json = "1.0.113"
log = "0.4.20"
env_logger = "0.11.1"
regex = "1.10.3"

[[bin]]
name="daemon"
path="src/bin/daemon/main.rs"

[[bin]]
name="client"
path="src/bin/client/main.rs"
